NOCC 1.5  ?? ??, ??

  Bugs
    * Bug #1793631 : Wrong $conf->base_url with non-default port
      (Arnaud Boudou).
    * Bug #1766528 : Blank headers because AIX iconv uses different names (Carey
      Evans).

  Patches
    * Patch #1819600 : New inbox table layout for "standard" theme (Tim
      Gerundt).
    * Patch #1815635 : Corrected CS localisation (Ragimiri).
    * Patch #1810354 : Highlight and marking of rows in inbox table (Tim
      Gerundt).
    * Patch #1786808 : Move JavaScript code to own file (Tim Gerundt).

  RFE
    * RFE #1804115 : list of personalised files (Arnaud Boudou).

  Misc
    * Remove unused $_SESSION['tab_mail'] (Tim Gerundt).
    * Add "Even/Odd" theming support for inbox (Tim Gerundt).
    * Fix issue with session save cookie (Arnaud Boudou).
    * Add a new way to use 'user@domain' style logins (Arnaud Boudou).
    * Cut off long "From" addresses in inbox (Tim Gerundt).
    * Remove nested table from inbox opts menu (Tim Gerundt).
    * Change the way language list is displayed (Arnaud Boudou).
    * Welsh translation added (Sion Pennant).
    * Fix issues with server self provided details on login page
      (Arnaud Boudou).

NOCC 1.4  July 01, 2007

  Bugs
    * Bug #1629751 : Deleting mails reports "Could not connect to server" 
      (Arnaud Boudou).

  Patches
    * Patch #1742563 : Add time to mail view (Tim Gerundt).
    * Patch #1738781 : Use more flexible inbox table (Tim Gerundt).
    * Patch #1717436 : Show folder select only with more folders (Tim Gerundt).
    * Patch #1712388 : Prevent problems with base_url under windows (Tim
      Gerundt).
    * Patch #1706947 : Hide lang and theme select from login page (Tim Gerundt).
    * Patch #1682496 : Add "Unread" and "Attachment" as own column
      (Tim Gerundt).
    * Patch #1681769 : Use only one sorted arrow (Tim Gerundt).
    * Patch #1674343 : Missing translation for Dutch (openfan).
    * Patch #1663909 : Column order preference (Tim Gerundt).