@@ -1,4 +1,4 @@
-<!-- start of $Id: menu_prefs.php,v 1.27 2006/02/26 11:07:52 goddess_skuld Exp $ -->
+<!-- start of $Id: menu_prefs.php,v 1.28 2006/11/22 14:27:18 goddess_skuld Exp $ -->
 <?php
   if (!isset($conf->loaded))
     die('Hacking attempt');
@@ -15,19 +15,11 @@
       <td class="menuBlank">
       </td>
       <?php if ($conf->prefs_dir && isset($conf->contact_number_max) && $conf->contact_number_max != 0 ) { ?>
-      <td class="menuSmall">
+      <td class="menu">
         <a href="javascript:void(0);" class="menu" onclick="window.open('contacts_manager.php?<?php echo session_name() . '=' .   session_id() ?>','','scrollbars=yes,resizable=yes,width=600,height=400')"><?php echo convertLang2Html($html_contacts) ?></a>
-      </td>
-      <?php } ?>
-      <td class="menuSmallSelected">
-        <?php echo convertLang2Html($html_preferences) ?>
-      </td>
-      <?php if ($conf->enable_logout) { ?>
-      <td class="menuSmall">
-        <a href="logout.php"><?php echo convertLang2Html($html_logout) ?></a>
       </td>
       <?php } ?>
     </tr>
   </table>
 </div>
-<!-- end of $Id: menu_prefs.php,v 1.27 2006/02/26 11:07:52 goddess_skuld Exp $ -->
+<!-- end of $Id: menu_prefs.php,v 1.28 2006/11/22 14:27:18 goddess_skuld Exp $ -->
