@@ -1,3 +1,13 @@
+#header h1,
+#header ul {
+  display:none;
+}
+
+#header h2 {
+  margin-left: 0;
+  padding-left: 0;
+}
+
 .dontPrint {
   display:none;
 }
