@@ -7,6 +7,8 @@ NOCC 1.5  ?? ??, ??
       Evans).
 
   Patches
+    * Patch #1838031 : Move "Preferences" and "Logout" to the top right corner 
+      (Tim Gerundt).
     * Patch #1819600 : New inbox table layout for "standard" theme (Tim
       Gerundt).
     * Patch #1815635 : Corrected CS localisation (Ragimiri).
